--- a/.github/workflows/api-rest.yml
+++ b/.github/workflows/api-rest.yml
@@ -1,10 +1,13 @@
 name: "API-Test-RESTful"
 
 on:
-  pull_request:
-    types: [opened, reopened]
+  push:
     branches:
-      - main
+      - "*"
+  pull_request:
+    branches:
+      - "*"
+
 env:
   VERSION: 0.6.0-SNAPSHOT
 
