--- a/.github/workflows/api-rest.yml
+++ b/.github/workflows/api-rest.yml
@@ -64,7 +64,7 @@ jobs:
       matrix:
         java: [ 8 ]
         python-version: [ "3.7" ]
-        os: [ ubuntu-latest, macos-latest ]
+        os: [ ubuntu-latest, macos-11 ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
