change the config

--- a/test/src/test/java/cn/edu/tsinghua/iginx/integration/controller/testConfig.properties
+++ b/test/src/test/java/cn/edu/tsinghua/iginx/integration/controller/testConfig.properties
@@ -1,6 +1,6 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
-storageEngineList=IoTDB12,InfluxDB,Parquet
+storageEngineList=IoTDB12,InfluxDB,Parquet,TimescaleDB
 
 # the info of the engine that you list in storageEngineList
 IoTDB12=127.0.0.1#6668#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
@@ -9,8 +9,8 @@ Parquet=127.0.0.1#6668#parquet#dir=parquetData2#sessionPoolSize=20#has_data=fals
 
 # the test for every engine
 # the normal test TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT
-test-list={}SQLSessionIT,{}SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT,SessionV2IT,{}SessionIT,{}SessionPoolIT
-influxdb-test-list={}SQLSessionIT,{}SQLSessionPoolIT,RestAnnotationIT,TransformIT,{}SessionIT,{}SessionPoolIT
+test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT
+influxdb-test-list=SQLSessionIT,SQLSessionPoolIT,RestAnnotationIT,TransformIT,BaseSessionIT,BaseSessionPoolIT
 
 # the DB config
 IoTDB12-config=isAbleToClearData=true,isAbleToDelete=true,isAbleToShowTimeSeries=true,isSupportSpecialPath=true,isSupportTagKV=true
