--- a/test/src/test/java/cn/edu/tsinghua/iginx/integration/controller/testConfig.properties
+++ b/test/src/test/java/cn/edu/tsinghua/iginx/integration/controller/testConfig.properties
@@ -10,9 +10,9 @@ Parquet=127.0.0.1#6668#parquet#dir=parquetData2#sessionPoolSize=20#has_data=fals
 # the test for every engine
 # the normal test TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT
 
-#test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT
-test-list=BaseSessionIT,BaseSessionPoolIT
+test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT
 influxdb-test-list=SQLSessionIT,SQLSessionPoolIT,RestAnnotationIT,TransformIT,BaseSessionIT,BaseSessionPoolIT
+parquet-test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT
 
 # the DB config
 IoTDB12-config=isAbleToClearData=true,isAbleToDelete=true,isAbleToShowTimeSeries=true,isSupportSpecialPath=true,isSupportTagKV=true
