--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -6,8 +6,8 @@ on:
       - main
 env:
   VERSION: 0.6.0-SNAPSHOT
-  FUNCTEST: TagIT,RestIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT
-  INFLUXDB-FUNCTEST: RestAnnotationIT,UDFIT,SQLSessionIT,SQLSessionPoolIT
+  FUNCTEST: BaseSessionIT
+  INFLUXDBFUNCTEST: RestAnnotationIT
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -67,9 +67,9 @@ jobs:
         run: |
           mvn test -q -Dtest=${{matrix.DB-name}}HistoryDataCapacityExpansionIT#oriHasDataExpHasData -DfailIfNoTests=false
           if [ "${{matrix.DB-name}}" == "InfluxDB" ]; then
-            mvn test -q -Dtest=${INFLUXDB-FUNCTEST} -DfailIfNoTests=false
+            mvn test -q -Dtest=${INFLUXDBFUNCTEST} -DfailIfNoTests=false
           else
-            mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false
+            mvn test -q -Dtest=BaseSessionIT -DfailIfNoTests=false
           fi
       #第 2 阶段测试开始==========================================
       - name: Prepare CapExp environment oriNoDataExpNoData
@@ -84,9 +84,9 @@ jobs:
         run: |
           mvn test -q -Dtest=${{matrix.DB-name}}HistoryDataCapacityExpansionIT#oriNoDataExpNoData -DfailIfNoTests=false
           if [ "${{matrix.DB-name}}" == "InfluxDB" ]; then
-            mvn test -q -Dtest=${INFLUXDB-FUNCTEST} -DfailIfNoTests=false
+            mvn test -q -Dtest=${INFLUXDBFUNCTEST} -DfailIfNoTests=false
           else
-            mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false
+            mvn test -q -Dtest=BaseSessionIT -DfailIfNoTests=false
           fi
       #第 3 阶段测试开始==========================================
       - name: Prepare CapExp environment oriHasDataExpNoData
@@ -101,9 +101,9 @@ jobs:
         run: |
           mvn test -q -Dtest=${{matrix.DB-name}}HistoryDataCapacityExpansionIT#oriHasDataExpNoData -DfailIfNoTests=false
           if [ "${{matrix.DB-name}}" == "InfluxDB" ]; then
-            mvn test -q -Dtest=${INFLUXDB-FUNCTEST} -DfailIfNoTests=false
+            mvn test -q -Dtest=${INFLUXDBFUNCTEST} -DfailIfNoTests=false
           else
-            mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false
+            mvn test -q -Dtest=BaseSessionIT -DfailIfNoTests=false
           fi
       #第 4 阶段测试开始==========================================
       - name: Prepare CapExp environment oriNoDataExpHasData
@@ -122,7 +122,7 @@ jobs:
             mvn test -q -Dtest=IoTDB12HistoryDataCapacityExpansionIT#schemaPrefix -DfailIfNoTests=false
           elif [ "${{matrix.DB-name}}" == "InfluxDB" ]; then
             mvn test -q -Dtest=InfluxDBHistoryDataCapacityExpansionIT#oriNoDataExpHasData -DfailIfNoTests=false
-            mvn test -q -Dtest=${INFLUXDB-FUNCTEST} -DfailIfNoTests=false
+            mvn test -q -Dtest=${INFLUXDBFUNCTEST} -DfailIfNoTests=false
           else
             echo "${{matrix.DB-name}} is not supported"
           fi
