--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -6,12 +6,12 @@ IoTDB12=127.0.0.1#6668#iotdb12#username=root#password=root#sessionPoolSize=20#ha
 InfluxDB=127.0.0.1#8087#influxdb#url=http://localhost:8087/#username=user#password=12345678#sessionPoolSize=20#has_data=false#is_read_only=false#token=testToken#organization=testOrg
 Parquet=127.0.0.1#6668#parquet#dir=parquetData2#sessionPoolSize=20#has_data=false#is_read_only=false
 # the test for every engine
-test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT
-influxdb-test-list=SQLSessionIT,SQLSessionPoolIT,RestAnnotationIT,TransformIT,BaseSessionIT,BaseSessionPoolIT
-parquet-test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,SessionV2IT
+test-list=SQLSessionIT,SQLSessionPoolIT,RestIT,TransformIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT
+influxdb-test-list=RestIT,RestAnnotationIT,SessionV2IT
+parquet-test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,UDFIT,TransformIT,SessionV2IT
 # the DB config
-IoTDB12-config=isAbleToClearData=true,isAbleToDelete=true,isAbleToShowTimeSeries=true,isSupportSpecialPath=true,isSupportTagKV=true
-InfluxDB-config=isAbleToClearData=false,isAbleToDelete=false,isAbleToShowTimeSeries=false,isSupportSpecialPath=false,isSupportTagKV=false
-Parquet-config=isAbleToClearData=false,isAbleToDelete=true,isAbleToShowTimeSeries=true,isSupportSpecialPath=false,isSupportTagKV=true
+IoTDB12-config=isAbleToClearData=true,isAbleToDelete=true,isAbleToShowTimeSeries=true,isSupportSpecialPath=true
+InfluxDB-config=isAbleToClearData=false,isAbleToDelete=false,isAbleToShowTimeSeries=false,isSupportSpecialPath=false
+Parquet-config=isAbleToClearData=false,isAbleToDelete=true,isAbleToShowTimeSeries=true,isSupportSpecialPath=false
 
 
