--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.19.graal</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-column</artifactId>
+            <version>1.12.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
