--- a/dataSources/filesystem/pom.xml
+++ b/dataSources/filesystem/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>hadoop-hdfs</artifactId>
             <version>3.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-core</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
