--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -7,7 +7,7 @@ on:
 env:
     VERSION: 0.6.0-SNAPSHOT
     FUNCTEST: TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT,CompactionIT
-    IoTDB12FUNCTEST: TagIT,RestIT,TransformIT,UDFIT,RestAnnotationIT,SQLSessionIT,SQLSessionPoolIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT,CompactionIT
+    IoTDB12FUNCTEST: ${FUNCTEST}
     InfluxDBFUNCTEST: RestAnnotationIT
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
