--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -8,7 +8,7 @@ Parquet=127.0.0.1#6668#parquet#dir=parquetData2#sessionPoolSize=20#has_data=fals
 MongoDB=127.0.0.1#27017#mongodb
 # the test for every engine
 test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT,CompactionIT
-influxdb-test-list=SQLSessionIT,SQLSessionPoolIT,RestAnnotationIT,TransformIT,BaseSessionIT,BaseSessionPoolIT,CompactionIT
+influxdb-test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,BaseSessionIT,BaseSessionPoolIT,CompactionIT
 parquet-test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,UDFIT,TransformIT,SessionV2IT,CompactionIT
 mongodb-test-list=SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,UDFIT,TransformIT,SessionV2IT,CompactionIT
 # the DB config
