--- a/dataSources/filesystem/pom.xml
+++ b/dataSources/filesystem/pom.xml
@@ -27,24 +27,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.parquet</groupId>
-            <artifactId>parquet-hadoop</artifactId>
-            <version>1.12.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jexl3</artifactId>
+            <version>3.2.1</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
-            <version>3.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-hdfs</artifactId>
-            <version>3.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-mapreduce-client-core</artifactId>
-            <version>3.3.1</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
         </dependency>
     </dependencies>
 
@@ -62,8 +52,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>../../core/target/iginx-core-${project.version}/driver/filesystem/
-                            </outputDirectory>
+                            <outputDirectory>../../core/target/iginx-core-${project.version}/driver/filesystem/</outputDirectory>
                             <excludeScope>provided</excludeScope>
                         </configuration>
                     </execution>
@@ -82,7 +71,7 @@
                         </goals>
                         <configuration>
                             <target>
-                                <copy todir="../../core/target/iginx-core-${project.version}/driver/influxdb/">
+                                <copy todir="../../core/target/iginx-core-${project.version}/driver/filesystem/">
                                     <fileset dir="${project.basedir}/target/">
                                         <include name="*.jar"/>
                                     </fileset>
