--- a/conf/config.properties
+++ b/conf/config.properties
@@ -14,14 +14,14 @@ username=root
 password=root
 
 # 时序数据库列表，使用','分隔不同实例
-storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
+#storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
 #storageEngineList=127.0.0.1#4242#opentsdb#url=http://127.0.0.1
 #storageEngineList=11.101.17.21#5432#timescaledb#username=postgres#password=123456
 #storageEngineList=11.101.17.21#5432#postgresql#username=postgres#password=123456
 #storageEngineList=127.0.0.1#6667#parquet#dir=parquetData
 #storageEngineList=127.0.0.1#27017#mongodb
-#storageEngineList=127.0.0.1#6667#filesystem
+storageEngineList=127.0.0.1#6667#filesystem
 
 # 写入的副本个数
 replicaNum=0
@@ -40,7 +40,7 @@ physicalTaskThreadPoolSizePerStorage=100
 maxCachedPhysicalTaskPerStorage=500
 
 # 逻辑层优化策略
-queryOptimizer=remove_not,filter_fragment
+queryOptimizer=remove_not,filter_fragment,filter_push_down
 
 # ParallelGroupBy触发行数
 parallelGroupByRowsThreshold=10000
@@ -144,7 +144,7 @@ fragment_cache_threshold=131072
 ### 执行层配置
 ##########################
 
-enablePushDown=false
+enablePushDown=true
 
 useStreamExecutor=false
 
