--- a/pom.xml
+++ b/pom.xml
@@ -78,105 +78,105 @@
             </activation>
             <build>
                 <plugins>
-                    <!--对项目中的文件进行格式化-->
-                    <plugin>
-                        <groupId>com.diffplug.spotless</groupId>
-                        <artifactId>spotless-maven-plugin</artifactId>
-                        <version>2.30.0</version>
-                        <configuration>
-                            <java>
-                                <toggleOffOn/>
-                                <importOrder/>
-                                <!--removeUnusedImports/>
-								<palantirJavaFormat>
-									<version>1.1.0</version>
-								</palantirJavaFormat>
-								<formatAnnotations/-->
-                                <googleJavaFormat>
-                                    <version>1.6</version>
-                                    <style>AOSP</style>
-                                    <!-- or GOOGLE(optional) -->
-                                </googleJavaFormat>
-                                <indent>
-                                    <spaces>true</spaces>
-                                    <spacesPerTab>4</spacesPerTab>
-                                </indent>
-                            </java>
-                            <python>
-                                <includes>
-                                    <include>**/*.py</include>
-                                </includes>
-                            </python>
-                            <antlr4>
-                                <includes>
-                                    <include>**/*.g4</include>
-                                </includes>
-                                <antlr4Formatter>
-                                    <version>1.2.1</version>
-                                </antlr4Formatter>
-                            </antlr4>
-                            <sql>
-                                <includes>
-                                    <include>**/*.sql</include>
-                                </includes>
-                                <!--prettier/>
-                                <dbeaver/-->
-                            </sql>
-                            <yaml>
-                                <includes>
-                                    <include>**/*.yml</include>
-                                    <include>**/*.yaml</include>
-                                </includes>
-                                <excludes>
-                                    <exclude>.github/**/*.yml</exclude>
-                                </excludes>
-                            </yaml>
-                            <formats>
-                                <format>
-                                    <includes>
-                                        <include>.github/**/*.yml</include>
-                                    </includes>
-                                    <prettier>
-                                        <prettierVersion>1.19.0</prettierVersion>
-                                        <config>
-                                            <tabWidth>4</tabWidth>
-                                            <useTabs>true</useTabs>
-                                        </config>
-                                    </prettier>
-                                </format>
-                            </formats>
-                            <markdown>
-                                <includes>
-                                    <include>**/*.md</include>
-                                </includes>
-                                <flexmark/>
-                            </markdown>
-                            <pom>
-                                <includes>
-                                    <include>pom.xml</include>
-                                </includes>
-                                <sortPom>
-                                    <encoding>UTF-8</encoding>
-                                    <keepBlankLines>true</keepBlankLines>
-                                    <nrOfIndentSpace>4</nrOfIndentSpace>
-                                    <indentBlankLines>false</indentBlankLines>
-                                    <indentSchemaLocation>true</indentSchemaLocation>
-                                    <expandEmptyElements>false</expandEmptyElements>
-                                    <sortProperties>true</sortProperties>
-                                </sortPom>
-                            </pom>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>format</id>
-                                <goals>
-                                    <!--goal>check</goal-->
-                                    <goal>apply</goal>
-                                </goals>
-                                <phase>process-sources</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
+<!--                    &lt;!&ndash;对项目中的文件进行格式化&ndash;&gt;-->
+<!--                    <plugin>-->
+<!--                        <groupId>com.diffplug.spotless</groupId>-->
+<!--                        <artifactId>spotless-maven-plugin</artifactId>-->
+<!--                        <version>2.30.0</version>-->
+<!--                        <configuration>-->
+<!--                            <java>-->
+<!--                                <toggleOffOn/>-->
+<!--                                <importOrder/>-->
+<!--                                &lt;!&ndash;removeUnusedImports/>-->
+<!--								<palantirJavaFormat>-->
+<!--									<version>1.1.0</version>-->
+<!--								</palantirJavaFormat>-->
+<!--								<formatAnnotations/&ndash;&gt;-->
+<!--                                <googleJavaFormat>-->
+<!--                                    <version>1.6</version>-->
+<!--                                    <style>AOSP</style>-->
+<!--                                    &lt;!&ndash; or GOOGLE(optional) &ndash;&gt;-->
+<!--                                </googleJavaFormat>-->
+<!--                                <indent>-->
+<!--                                    <spaces>true</spaces>-->
+<!--                                    <spacesPerTab>4</spacesPerTab>-->
+<!--                                </indent>-->
+<!--                            </java>-->
+<!--                            <python>-->
+<!--                                <includes>-->
+<!--                                    <include>**/*.py</include>-->
+<!--                                </includes>-->
+<!--                            </python>-->
+<!--                            <antlr4>-->
+<!--                                <includes>-->
+<!--                                    <include>**/*.g4</include>-->
+<!--                                </includes>-->
+<!--                                <antlr4Formatter>-->
+<!--                                    <version>1.2.1</version>-->
+<!--                                </antlr4Formatter>-->
+<!--                            </antlr4>-->
+<!--                            <sql>-->
+<!--                                <includes>-->
+<!--                                    <include>**/*.sql</include>-->
+<!--                                </includes>-->
+<!--                                &lt;!&ndash;prettier/>-->
+<!--                                <dbeaver/&ndash;&gt;-->
+<!--                            </sql>-->
+<!--                            <yaml>-->
+<!--                                <includes>-->
+<!--                                    <include>**/*.yml</include>-->
+<!--                                    <include>**/*.yaml</include>-->
+<!--                                </includes>-->
+<!--                                <excludes>-->
+<!--                                    <exclude>.github/**/*.yml</exclude>-->
+<!--                                </excludes>-->
+<!--                            </yaml>-->
+<!--                            <formats>-->
+<!--                                <format>-->
+<!--                                    <includes>-->
+<!--                                        <include>.github/**/*.yml</include>-->
+<!--                                    </includes>-->
+<!--                                    <prettier>-->
+<!--                                        <prettierVersion>1.19.0</prettierVersion>-->
+<!--                                        <config>-->
+<!--                                            <tabWidth>4</tabWidth>-->
+<!--                                            <useTabs>true</useTabs>-->
+<!--                                        </config>-->
+<!--                                    </prettier>-->
+<!--                                </format>-->
+<!--                            </formats>-->
+<!--                            <markdown>-->
+<!--                                <includes>-->
+<!--                                    <include>**/*.md</include>-->
+<!--                                </includes>-->
+<!--                                <flexmark/>-->
+<!--                            </markdown>-->
+<!--                            <pom>-->
+<!--                                <includes>-->
+<!--                                    <include>pom.xml</include>-->
+<!--                                </includes>-->
+<!--                                <sortPom>-->
+<!--                                    <encoding>UTF-8</encoding>-->
+<!--                                    <keepBlankLines>true</keepBlankLines>-->
+<!--                                    <nrOfIndentSpace>4</nrOfIndentSpace>-->
+<!--                                    <indentBlankLines>false</indentBlankLines>-->
+<!--                                    <indentSchemaLocation>true</indentSchemaLocation>-->
+<!--                                    <expandEmptyElements>false</expandEmptyElements>-->
+<!--                                    <sortProperties>true</sortProperties>-->
+<!--                                </sortPom>-->
+<!--                            </pom>-->
+<!--                        </configuration>-->
+<!--                        <executions>-->
+<!--                            <execution>-->
+<!--                                <id>format</id>-->
+<!--                                <goals>-->
+<!--                                    &lt;!&ndash;goal>check</goal&ndash;&gt;-->
+<!--                                    <goal>apply</goal>-->
+<!--                                </goals>-->
+<!--                                <phase>process-sources</phase>-->
+<!--                            </execution>-->
+<!--                        </executions>-->
+<!--                    </plugin>-->
                 </plugins>
             </build>
         </profile>
