fix the IT for try

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -8,8 +8,8 @@ InfluxDB=127.0.0.1#8087#influxdb#url=http://localhost:8087/#username=user#passwo
 Parquet=127.0.0.1#6668#parquet#dir=parquetData2#sessionPoolSize=20#has_data=false#is_read_only=false
 MongoDB=127.0.0.1#27017#mongodb
 # the test for every engine
-test-list=SQLCompareIT,NewSessionIT,SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT,CompactionIT,TimePrecisionIT
-mongodb-test-list=SQLCompareIT,NewSessionIT,SQLSessionIT,SQLSessionPoolIT,TagIT,RestAnnotationIT,RestIT,UDFIT,TransformIT,SessionV2IT,CompactionIT,TimePrecisionIT
+test-list=SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,BaseSessionIT,BaseSessionPoolIT,CompactionIT,TimePrecisionIT
+mongodb-test-list=SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,UDFIT,TransformIT,SessionV2IT,CompactionIT,TimePrecisionIT
 # the DB config
 IoTDB12-config=isAbleToClearData=true,isAbleToDelete=true,isAbleToShowTimeSeries=true,isSupportSpecialPath=true
 InfluxDB-config=isAbleToClearData=true,isAbleToDelete=false,isAbleToShowTimeSeries=true,isSupportSpecialPath=false
