--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -66,3 +66,9 @@ jobs:
               shell: bash
               run: |
                   cat ${GITHUB_WORKSPACE}/test/src/test/resources/testResult.txt
+
+            - name: Show Server log
+              if: always()
+              shell: bash
+              run: |
+                  cat ${GITHUB_WORKSPACE}/.github/server_log 
