修复了iginx的潜在问题，开启下推，内存问题

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -41,7 +41,7 @@ physicalTaskThreadPoolSizePerStorage=100
 maxCachedPhysicalTaskPerStorage=500
 
 # 逻辑层优化策略
-queryOptimizer=remove_not,filter_fragment
+queryOptimizer=remove_not,filter_fragment,filter_push_down
 
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
@@ -147,7 +147,7 @@ fragment_cache_threshold=131072
 ### 执行层配置
 ##########################
 
-enablePushDown=false
+enablePushDown=true
 
 useStreamExecutor=false
 
