--- a/.github/workflows/case-regression.yml
+++ b/.github/workflows/case-regression.yml
@@ -56,4 +56,4 @@ jobs:
               if: always()
               shell: bash
               run: |
-                  cat iginx.log
+                  cat iginx-*.log
