--- a/.github/workflows/standalone-test-pushdown.yml
+++ b/.github/workflows/standalone-test-pushdown.yml
@@ -20,7 +20,7 @@ jobs:
                 python-version: ["3.7"]
                 os: [ubuntu-latest, macos-latest]
                 DB-name:
-                    ["InfluxDB", "Redis", "PostgreSQL", "FileSystem", "MongoDB"]
+                    [ "FileSystem"]
         runs-on: ${{ matrix.os }}
         steps:
             - uses: actions/checkout@v2
